[tool.poetry]
name = "proxpf"
version = "0.1.0"
description = "Port-forwarding automation for iptables"
authors = ["Alice Vollink <me@alicevie.space>"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
